--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
     </startup>
