--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -6,6 +6,9 @@
         <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString"
             connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
