--- a/TCCMadeireira/TCCMadeireira.csproj
+++ b/TCCMadeireira/TCCMadeireira.csproj
@@ -101,6 +101,12 @@
     <Compile Include="Views\FrmProduto.Designer.cs">
       <DependentUpon>FrmProduto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\FrmProdVenda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmProdVenda.Designer.cs">
+      <DependentUpon>FrmProdVenda.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FrmUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmProduto.resx">
       <DependentUpon>FrmProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmProdVenda.resx">
+      <DependentUpon>FrmProdVenda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmVenda.resx">
+      <DependentUpon>FrmVenda.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Bancos\DataSetMadeireira.xsc">
       <DependentUpon>DataSetMadeireira.xsd</DependentUpon>
