--- a/TCCMadeireira/TCCMadeireira.csproj
+++ b/TCCMadeireira/TCCMadeireira.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bancos\Banco.cs" />
+    <Compile Include="Util\Banco.cs" />
     <Compile Include="Bancos\DataSetMadeireira.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -66,6 +66,7 @@
     <Compile Include="Models\ValidarCpfCnpj.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Log.cs" />
     <Compile Include="Views\FrmCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmFornecedor.resx">
       <DependentUpon>FrmFornecedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmFornecimento.resx">
+      <DependentUpon>FrmFornecimento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmFuncionario.resx">
       <DependentUpon>FrmFuncionario.cs</DependentUpon>
