--- a/TCCMadeireira/TCCMadeireira.csproj
+++ b/TCCMadeireira/TCCMadeireira.csproj
@@ -66,7 +66,7 @@
     </Compile>
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Funcionario.cs" />
-    <Compile Include="Models\ValidarCpfCnpj.cs" />
+    <Compile Include="Util\ValidarCpfCnpj.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Log.cs" />
@@ -204,6 +204,7 @@
     <None Include="Bancos\DataSetMadeireiraV2.xss">
       <DependentUpon>DataSetMadeireiraV2.xsd</DependentUpon>
     </None>
+    <None Include="Diagramas\DiagramaDeClasse.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
