--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -3,8 +3,17 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString" connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True" providerName="System.Data.SqlClient"/>
-        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString" connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
+            connectionString="Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.EscolaConnectionString"
+            connectionString="Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.CasaConnectionString"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
