--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -7,13 +7,16 @@
             connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            connectionString="Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
             providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.EscolaConnectionString"
-            connectionString="Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            connectionString="Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
             providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.CasaConnectionString"
             connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" />
+        <add name="TCCMadeireira.Properties.Settings.db_04919_1_C_1_2017ConnectionString"
+            connectionString="Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
