--- a/TCCMadeireira/Properties/Settings.settings
+++ b/TCCMadeireira/Properties/Settings.settings
@@ -13,18 +13,18 @@
     <Setting Name="MadeireiraConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd</Value>
+      <Value Profile="(Default)">Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd</Value>
     </Setting>
     <Setting Name="EscolaConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=172.168.255.252;Initial Catalog=db_05579_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd</Value>
+      <Value Profile="(Default)">Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd</Value>
     </Setting>
     <Setting Name="CasaConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
@@ -32,6 +32,14 @@
   &lt;ConnectionString&gt;Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="db_04919_1_C_1_2017ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd</Value>
     </Setting>
   </Settings>
 </SettingsFile>
