--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString"
             connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.EscolaConnectionString"
-            connectionString="Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            connectionString="Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
             providerName="System.Data.SqlClient" />
-        <add name="TCCMadeireira.Properties.Settings.CasaConnectionString"
-            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" />
         <add name="TCCMadeireira.Properties.Settings.db_04919_1_C_1_2017ConnectionString"
-            connectionString="Data Source=172.168.255.252;Initial Catalog=db_04919_1_C_1_2017;User ID=04919_1_C_1_2017;Password=p@ssw0rd"
+            connectionString="Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
+    <applicationSettings>
+        <TCCMadeireira.Properties.Settings>
+            <setting name="CasaConnectionString" serializeAs="String">
+                <value>Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True</value>
+            </setting>
+            <setting name="CasaPWDConnectionString" serializeAs="String">
+                <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
+            </setting>
+        </TCCMadeireira.Properties.Settings>
+    </applicationSettings>
 </configuration>
