--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -10,13 +10,7 @@
             connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="TCCMadeireira.Properties.Settings.EscolaConnectionString"
-            connectionString="Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
-            providerName="System.Data.SqlClient" />
-        <add name="TCCMadeireira.Properties.Settings.db_04919_1_C_1_2017ConnectionString"
-            connectionString="Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
+            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -24,11 +18,20 @@
     </startup>
     <applicationSettings>
         <TCCMadeireira.Properties.Settings>
+            <setting name="EscolaConnectionString" serializeAs="String">
+                <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
+            </setting>
             <setting name="CasaConnectionString" serializeAs="String">
                 <value>Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True</value>
             </setting>
             <setting name="CasaPWDConnectionString" serializeAs="String">
                 <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
+            </setting>
+            <setting name="db_04919_1_C_1_2017ConnectionString" serializeAs="String">
+                <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
+            </setting>
+            <setting name="NoteConnectionString" serializeAs="String">
+                <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True</value>
             </setting>
         </TCCMadeireira.Properties.Settings>
     </applicationSettings>
