--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString"
@@ -35,4 +38,17 @@
             </setting>
         </TCCMadeireira.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <TCCMadeireira.Properties.Settings>
+            <setting name="idUsuario" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="nomeUsuario" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="nivelUsuario" serializeAs="String">
+                <value />
+            </setting>
+        </TCCMadeireira.Properties.Settings>
+    </userSettings>
 </configuration>
