--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -36,6 +36,21 @@
             <setting name="NoteConnectionString" serializeAs="String">
                 <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True</value>
             </setting>
+            <setting name="ServerName" serializeAs="String">
+                <value>desktop-fqa</value>
+            </setting>
+            <setting name="DBName" serializeAs="String">
+                <value>Madeireira</value>
+            </setting>
+            <setting name="LoginServer" serializeAs="String">
+                <value>Otavio</value>
+            </setting>
+            <setting name="PwdServer" serializeAs="String">
+                <value>Otavio@435</value>
+            </setting>
+            <setting name="ServerInstance" serializeAs="String">
+                <value>fqasqlserver</value>
+            </setting>
         </TCCMadeireira.Properties.Settings>
     </applicationSettings>
     <userSettings>
