--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -59,10 +59,10 @@
                 <value>0</value>
             </setting>
             <setting name="nomeUsuario" serializeAs="String">
-                <value />
+                <value>USER</value>
             </setting>
             <setting name="nivelUsuario" serializeAs="String">
-                <value />
+                <value>STANDARD</value>
             </setting>
         </TCCMadeireira.Properties.Settings>
     </userSettings>
