--- a/TCCMadeireira/Properties/Settings.settings
+++ b/TCCMadeireira/Properties/Settings.settings
@@ -37,10 +37,10 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="nomeUsuario" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">USER</Value>
     </Setting>
     <Setting Name="nivelUsuario" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">STANDARD</Value>
     </Setting>
     <Setting Name="ServerName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">desktop-fqa</Value>
