--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -1,18 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="TCCMadeireira.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString" connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString" connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
     </startup>
     <applicationSettings>
         <TCCMadeireira.Properties.Settings>
@@ -54,18 +54,18 @@
                 <value>-1</value>
             </setting>
             <setting name="nomeUsuario" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="nivelUsuario" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </TCCMadeireira.Properties.Settings>
     </userSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.SqlServer.ConnectionInfo" publicKeyToken="89845dcd8080cc91" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-14.100.0.0" newVersion="14.100.0.0" />
+        <assemblyIdentity name="Microsoft.SqlServer.ConnectionInfo" publicKeyToken="89845dcd8080cc91" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-14.100.0.0" newVersion="14.100.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
