commit antes da caquita

--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -9,13 +9,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-<<<<<<< HEAD
-        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString" connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" providerName="System.Data.SqlClient"/>
-=======
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
->>>>>>> 320e673a43653b4f178eacf4e1fea1622b4cc410
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
@@ -38,13 +34,13 @@
                 <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435</value>
             </setting>
             <setting name="ServerName" serializeAs="String">
-                <value>note-fqa</value>
+                <value>desktop-fqa</value>
             </setting>
             <setting name="DBName" serializeAs="String">
                 <value>Madeireira</value>
             </setting>
             <setting name="LoginServer" serializeAs="String">
-                <value>FQA</value>
+                <value>Otavio</value>
             </setting>
             <setting name="PwdServer" serializeAs="String">
                 <value>Otavio@435</value>
@@ -60,10 +56,10 @@
                 <value>-1</value>
             </setting>
             <setting name="nomeUsuario" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="nivelUsuario" serializeAs="String">
-                <value/>
+                <value />
             </setting>
         </TCCMadeireira.Properties.Settings>
     </userSettings>
