--- a/TCCMadeireira/Properties/Settings.settings
+++ b/TCCMadeireira/Properties/Settings.settings
@@ -44,10 +44,10 @@
     <Setting Name="MadeireiraConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</Value>
     </Setting>
   </Settings>
 </SettingsFile>
