--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -31,10 +31,10 @@
                 <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
             </setting>
             <setting name="NoteConnectionString" serializeAs="String">
-                <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435</value>
+                <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True</value>
             </setting>
             <setting name="ServerName" serializeAs="String">
-                <value>desktop-fqa</value>
+                <value>note-fqa</value>
             </setting>
             <setting name="DBName" serializeAs="String">
                 <value>Madeireira</value>
